--- a/genindex.html
+++ b/genindex.html
@@ -5,15 +5,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Index &#8212; sageopt 0.5.0 documentation</title>
+    <title>Index &#8212; sageopt  documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
-    <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
-    <script src="_static/jquery.js"></script>
-    <script src="_static/underscore.js"></script>
-    <script src="_static/doctools.js"></script>
-    <script src="_static/language_data.js"></script>
-    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
+    <script type="text/javascript" src="_static/jquery.js"></script>
+    <script type="text/javascript" src="_static/underscore.js"></script>
+    <script type="text/javascript" src="_static/doctools.js"></script>
+    <script type="text/javascript" src="_static/language_data.js"></script>
+    <script async="async" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" />
    
@@ -70,7 +70,7 @@
     </form>
     </div>
 </div>
-<script>$('#searchbox').show(0);</script>
+<script type="text/javascript">$('#searchbox').show(0);</script>
 
 
 
@@ -108,6 +108,7 @@
  | <a href="#P"><strong>P</strong></a>
  | <a href="#Q"><strong>Q</strong></a>
  | <a href="#S"><strong>S</strong></a>
+ | <a href="#T"><strong>T</strong></a>
  | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
  | <a href="#X"><strong>X</strong></a>
@@ -120,6 +121,8 @@
 </li>
       <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.PrimalSageCone.age_vectors">age_vectors (sageopt.coniclifts.PrimalSageCone attribute)</a>
 </li>
+      <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.PrimalSageCone.age_witnesses">age_witnesses (sageopt.coniclifts.PrimalSageCone attribute)</a>
+</li>
       <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.Problem.all_variables">all_variables (sageopt.coniclifts.Problem attribute)</a>
 </li>
       <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.DualSageCone.alpha">alpha (sageopt.coniclifts.DualSageCone attribute)</a>
@@ -128,14 +131,14 @@
         <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.PrimalSageCone.alpha">(sageopt.coniclifts.PrimalSageCone attribute)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="documentation/sageopt.signomials.html#sageopt.Signomial.alpha">alpha() (sageopt.Signomial property)</a>
 
       <ul>
         <li><a href="documentation/sageopt.polynomials.html#sageopt.symbolic.polynomials.Polynomial.alpha">(sageopt.symbolic.polynomials.Polynomial property)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="documentation/sageopt.signomials.html#sageopt.Signomial.alpha_c">alpha_c() (sageopt.Signomial property)</a>
 
       <ul>
@@ -356,11 +359,7 @@
 <h2 id="O">O</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.Problem.objective_expr">objective_expr (sageopt.coniclifts.Problem attribute)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.Problem.objective_sense">objective_sense (sageopt.coniclifts.Problem attribute)</a>
+      <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.Problem.objective">objective (sageopt.coniclifts.Problem attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -422,17 +421,21 @@
         <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.Variable.scalar_variables">(sageopt.coniclifts.Variable method)</a>
 </li>
       </ul></li>
+      <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.Problem.sense">sense (sageopt.coniclifts.Problem attribute)</a>
+</li>
       <li><a href="documentation/sageopt.signomials.html#sageopt.sig_constrained_relaxation">sig_constrained_relaxation() (in module sageopt)</a>
 </li>
       <li><a href="documentation/sageopt.signomials.html#sageopt.sig_relaxation">sig_relaxation() (in module sageopt)</a>
 </li>
       <li><a href="documentation/sageopt.polynomials.html#sageopt.symbolic.polynomials.Polynomial.sig_rep">sig_rep() (sageopt.symbolic.polynomials.Polynomial property)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="documentation/sageopt.signomials.html#sageopt.sig_solrec">sig_solrec() (in module sageopt)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="documentation/sageopt.signomials.html#sageopt.SigDomain">SigDomain (class in sageopt)</a>
+</li>
+      <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.PrimalSageCone.sigma_x">sigma_x() (sageopt.coniclifts.PrimalSageCone method)</a>
 </li>
       <li><a href="documentation/sageopt.signomials.html#sageopt.Signomial">Signomial (class in sageopt)</a>
 </li>
@@ -450,6 +453,16 @@
 </li>
       <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.Problem.status">status (sageopt.coniclifts.Problem attribute)</a>
 </li>
+      <li><a href="documentation/sageopt.signomials.html#sageopt.SigDomain.suppfunc">suppfunc() (sageopt.SigDomain method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.Problem.timings">timings (sageopt.coniclifts.Problem attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -466,10 +479,10 @@
         <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.Variable.value">(sageopt.coniclifts.Variable property)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.Variable">Variable (class in sageopt.coniclifts)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.Problem.variable_map">variable_map (sageopt.coniclifts.Problem attribute)</a>
 </li>
       <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.Problem.variable_values">variable_values (sageopt.coniclifts.Problem attribute)</a>
@@ -478,6 +491,12 @@
 
       <ul>
         <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.Problem.variables">(sageopt.coniclifts.Problem method)</a>
+</li>
+      </ul></li>
+      <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.DualSageCone.violation">violation() (sageopt.coniclifts.DualSageCone method)</a>
+
+      <ul>
+        <li><a href="documentation/sageopt.coniclifts.html#sageopt.coniclifts.PrimalSageCone.violation">(sageopt.coniclifts.PrimalSageCone method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -516,10 +535,10 @@
     <div class="clearer"></div>
   </div>
     <div class="footer">
-      &copy;2019, Riley J. Murray.
+      &copy;2020, Riley J. Murray.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 2.4.3</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 2.2.0</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.12</a>
       
     </div>
